syntax-antlr/src/main/antlr/.antlr/LazoParser.java
// Generated from /Users/rpfister/Documents/hsr/sem7/SA/lazo-specification/syntax-antlr/src/main/antlr/Lazo.g4 by ANTLR 4.7.1

  package bazolang;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class LazoParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		BREAK=18, CONSTRUCTOR=19, CONTINUE=20, CONTRACT=21, EMIT=22, FUNCTION=23, 
		INTERFACE=24, INTERNAL=25, IS=26, MAP=27, READONLY=28, RETURN=29, STRUCT=30, 
		THROW=31, VERSION=32, BOOL=33, LPAREN=34, RPAREN=35, LBRACE=36, RBRACE=37, 
		LBRACK=38, RBRACK=39, SEMI=40, COMMA=41, DOT=42, PLUS=43, MIN=44, MUL=45, 
		DIV=46, MOD=47, EXP=48, LSHIFT=49, RSHIFT=50, AND=51, OR=52, NOT=53, BITWISE_AND=54, 
		BITWISE_OR=55, CARET=56, TILDE=57, EQ=58, NEQ=59, GT=60, GT_EQ=61, LT=62, 
		LT_EQ=63, IDENTIFIER=64, INTEGER=65, HEX_DIGIT_LIT=66, DEC_DIGIT_LIT=67, 
		STRING=68, CHARACTER=69, NLS=70, WHITE_SPACE=71, LINE_COMMENT=72, BLOCK_COMMENT=73;
	public static final int
		RULE_program = 0, RULE_versionDirective = 1, RULE_interfaceDeclaration = 2, 
		RULE_interfacePart = 3, RULE_functionSignature = 4, RULE_contractDeclaration = 5, 
		RULE_contractPart = 6, RULE_variableDeclaration = 7, RULE_structDeclaration = 8, 
		RULE_errorDeclaration = 9, RULE_structField = 10, RULE_eventDeclaration = 11, 
		RULE_enumDeclaration = 12, RULE_constructorDeclaration = 13, RULE_functionDeclaration = 14, 
		RULE_functionHead = 15, RULE_annotation = 16, RULE_paramList = 17, RULE_parameter = 18, 
		RULE_defaultParameter = 19, RULE_type = 20, RULE_arrayType = 21, RULE_mapType = 22, 
		RULE_statementBlock = 23, RULE_statement = 24, RULE_emitStatement = 25, 
		RULE_ifStatement = 26, RULE_forStatement = 27, RULE_forEachStatement = 28, 
		RULE_mapForEachStatement = 29, RULE_breakStatement = 30, RULE_continueStatement = 31, 
		RULE_rangeStatement = 32, RULE_expressionStatement = 33, RULE_sendStatement = 34, 
		RULE_argumentList = 35, RULE_namedArgument = 36, RULE_assignmentStatement = 37, 
		RULE_assignment = 38, RULE_designator = 39, RULE_throwStatement = 40, 
		RULE_returnStatement = 41, RULE_expression = 42, RULE_newCreation = 43, 
		RULE_structCreation = 44, RULE_arrayCreation = 45, RULE_mapCreation = 46, 
		RULE_operand = 47, RULE_literal = 48;
	public static final String[] ruleNames = {
		"program", "versionDirective", "interfaceDeclaration", "interfacePart", 
		"functionSignature", "contractDeclaration", "contractPart", "variableDeclaration", 
		"structDeclaration", "errorDeclaration", "structField", "eventDeclaration", 
		"enumDeclaration", "constructorDeclaration", "functionDeclaration", "functionHead", 
		"annotation", "paramList", "parameter", "defaultParameter", "type", "arrayType", 
		"mapType", "statementBlock", "statement", "emitStatement", "ifStatement", 
		"forStatement", "forEachStatement", "mapForEachStatement", "breakStatement", 
		"continueStatement", "rangeStatement", "expressionStatement", "sendStatement", 
		"argumentList", "namedArgument", "assignmentStatement", "assignment", 
		"designator", "throwStatement", "returnStatement", "expression", "newCreation", 
		"structCreation", "arrayCreation", "mapCreation", "operand", "literal"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'error'", "'event'", "'enum'", "':'", "'if'", "'else if'", "'else'", 
		"'for'", "'foreach'", "'to'", "'by'", "'send'", "'='", "'++'", "'--'", 
		"'?'", "'new'", "'break'", "'constructor'", "'continue'", "'contract'", 
		"'emit'", "'function'", "'interface'", "'internal'", "'is'", "'Map'", 
		"'readonly'", "'return'", "'struct'", "'throw'", "'version'", null, "'('", 
		"')'", "'{'", "'}'", "'['", "']'", "';'", "','", "'.'", "'+'", "'-'", 
		"'*'", "'/'", "'%'", "'**'", "'<<'", "'>>'", "'&&'", "'||'", "'!'", "'&'", 
		"'|'", "'^'", null, "'=='", "'!='", "'>'", "'>='", "'<'", "'<='"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, "BREAK", "CONSTRUCTOR", "CONTINUE", 
		"CONTRACT", "EMIT", "FUNCTION", "INTERFACE", "INTERNAL", "IS", "MAP", 
		"READONLY", "RETURN", "STRUCT", "THROW", "VERSION", "BOOL", "LPAREN", 
		"RPAREN", "LBRACE", "RBRACE", "LBRACK", "RBRACK", "SEMI", "COMMA", "DOT", 
		"PLUS", "MIN", "MUL", "DIV", "MOD", "EXP", "LSHIFT", "RSHIFT", "AND", 
		"OR", "NOT", "BITWISE_AND", "BITWISE_OR", "CARET", "TILDE", "EQ", "NEQ", 
		"GT", "GT_EQ", "LT", "LT_EQ", "IDENTIFIER", "INTEGER", "HEX_DIGIT_LIT", 
		"DEC_DIGIT_LIT", "STRING", "CHARACTER", "NLS", "WHITE_SPACE", "LINE_COMMENT", 
		"BLOCK_COMMENT"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Lazo.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public LazoParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgramContext extends ParserRuleContext {
		public VersionDirectiveContext versionDirective() {
			return getRuleContext(VersionDirectiveContext.class,0);
		}
		public ContractDeclarationContext contractDeclaration() {
			return getRuleContext(ContractDeclarationContext.class,0);
		}
		public TerminalNode EOF() { return getToken(LazoParser.EOF, 0); }
		public List<InterfaceDeclarationContext> interfaceDeclaration() {
			return getRuleContexts(InterfaceDeclarationContext.class);
		}
		public InterfaceDeclarationContext interfaceDeclaration(int i) {
			return getRuleContext(InterfaceDeclarationContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(98);
			versionDirective();
			setState(102);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==INTERFACE) {
				{
				{
				setState(99);
				interfaceDeclaration();
				}
				}
				setState(104);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(105);
			contractDeclaration();
			setState(106);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VersionDirectiveContext extends ParserRuleContext {
		public List<TerminalNode> INTEGER() { return getTokens(LazoParser.INTEGER); }
		public TerminalNode INTEGER(int i) {
			return getToken(LazoParser.INTEGER, i);
		}
		public TerminalNode NLS() { return getToken(LazoParser.NLS, 0); }
		public VersionDirectiveContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_versionDirective; }
	}

	public final VersionDirectiveContext versionDirective() throws RecognitionException {
		VersionDirectiveContext _localctx = new VersionDirectiveContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_versionDirective);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(108);
			match(VERSION);
			setState(109);
			match(INTEGER);
			setState(110);
			match(DOT);
			setState(111);
			match(INTEGER);
			setState(112);
			match(NLS);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class InterfaceDeclarationContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(LazoParser.IDENTIFIER, 0); }
		public List<TerminalNode> NLS() { return getTokens(LazoParser.NLS); }
		public TerminalNode NLS(int i) {
			return getToken(LazoParser.NLS, i);
		}
		public List<InterfacePartContext> interfacePart() {
			return getRuleContexts(InterfacePartContext.class);
		}
		public InterfacePartContext interfacePart(int i) {
			return getRuleContext(InterfacePartContext.class,i);
		}
		public InterfaceDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_interfaceDeclaration; }
	}

	public final InterfaceDeclarationContext interfaceDeclaration() throws RecognitionException {
		InterfaceDeclarationContext _localctx = new InterfaceDeclarationContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_interfaceDeclaration);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(114);
			match(INTERFACE);
			setState(115);
			match(IDENTIFIER);
			setState(116);
			match(LBRACE);
			setState(120);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==NLS) {
				{
				{
				setState(117);
				match(NLS);
				}
				}
				setState(122);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(126);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (((((_la - 27)) & ~0x3f) == 0 && ((1L << (_la - 27)) & ((1L << (MAP - 27)) | (1L << (LPAREN - 27)) | (1L << (LBRACK - 27)) | (1L << (IDENTIFIER - 27)))) != 0)) {
				{
				{
				setState(123);
				interfacePart();
				}
				}
				setState(128);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(129);
			match(RBRACE);
			setState(130);
			match(NLS);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class InterfacePartContext extends ParserRuleContext {
		public FunctionSignatureContext functionSignature() {
			return getRuleContext(FunctionSignatureContext.class,0);
		}
		public TerminalNode NLS() { return getToken(LazoParser.NLS, 0); }
		public InterfacePartContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_interfacePart; }
	}

	public final InterfacePartContext interfacePart() throws RecognitionException {
		InterfacePartContext _localctx = new InterfacePartContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_interfacePart);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(132);
			functionSignature();
			setState(133);
			match(NLS);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FunctionSignatureContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(LazoParser.IDENTIFIER, 0); }
		public List<TypeContext> type() {
			return getRuleContexts(TypeContext.class);
		}
		public TypeContext type(int i) {
			return getRuleContext(TypeContext.class,i);
		}
		public List<AnnotationContext> annotation() {
			return getRuleContexts(AnnotationContext.class);
		}
		public AnnotationContext annotation(int i) {
			return getRuleContext(AnnotationContext.class,i);
		}
		public ParamListContext paramList() {
			return getRuleContext(ParamListContext.class,0);
		}
		public FunctionSignatureContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_functionSignature; }
	}

	public final FunctionSignatureContext functionSignature() throws RecognitionException {
		FunctionSignatureContext _localctx = new FunctionSignatureContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_functionSignature);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(138);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==LBRACK) {
				{
				{
				setState(135);
				annotation();
				}
				}
				setState(140);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(153);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case MAP:
			case IDENTIFIER:
				{
				setState(141);
				type();
				}
				break;
			case LPAREN:
				{
				setState(142);
				match(LPAREN);
				setState(143);
				type();
				setState(148);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==COMMA) {
					{
					{
					setState(144);
					match(COMMA);
					setState(145);
					type();
					}
					}
					setState(150);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(151);
				match(RPAREN);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(155);
			match(IDENTIFIER);
			setState(156);
			match(LPAREN);
			setState(158);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==MAP || _la==IDENTIFIER) {
				{
				setState(157);
				paramList();
				}
			}

			setState(160);
			match(RPAREN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ContractDeclarationContext extends ParserRuleContext {
		public List<TerminalNode> IDENTIFIER() { return getTokens(LazoParser.IDENTIFIER); }
		public TerminalNode IDENTIFIER(int i) {
			return getToken(LazoParser.IDENTIFIER, i);
		}
		public List<TerminalNode> NLS() { return getTokens(LazoParser.NLS); }
		public TerminalNode NLS(int i) {
			return getToken(LazoParser.NLS, i);
		}
		public List<ContractPartContext> contractPart() {
			return getRuleContexts(ContractPartContext.class);
		}
		public ContractPartContext contractPart(int i) {
			return getRuleContext(ContractPartContext.class,i);
		}
		public ContractDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_contractDeclaration; }
	}

	public final ContractDeclarationContext contractDeclaration() throws RecognitionException {
		ContractDeclarationContext _localctx = new ContractDeclarationContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_contractDeclaration);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(162);
			match(CONTRACT);
			setState(163);
			match(IDENTIFIER);
			setState(173);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==IS) {
				{
				setState(164);
				match(IS);
				setState(165);
				match(IDENTIFIER);
				setState(170);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==COMMA) {
					{
					{
					setState(166);
					match(COMMA);
					setState(167);
					match(IDENTIFIER);
					}
					}
					setState(172);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}

			setState(175);
			match(LBRACE);
			setState(180);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__1) | (1L << T__2) | (1L << CONSTRUCTOR) | (1L << FUNCTION) | (1L << INTERNAL) | (1L << MAP) | (1L << READONLY) | (1L << STRUCT) | (1L << LBRACK))) != 0) || _la==IDENTIFIER || _la==NLS) {
				{
				setState(178);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case NLS:
					{
					setState(176);
					match(NLS);
					}
					break;
				case T__0:
				case T__1:
				case T__2:
				case CONSTRUCTOR:
				case FUNCTION:
				case INTERNAL:
				case MAP:
				case READONLY:
				case STRUCT:
				case LBRACK:
				case IDENTIFIER:
					{
					setState(177);
					contractPart();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(182);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(183);
			match(RBRACE);
			setState(185);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==NLS) {
				{
				setState(184);
				match(NLS);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ContractPartContext extends ParserRuleContext {
		public VariableDeclarationContext variableDeclaration() {
			return getRuleContext(VariableDeclarationContext.class,0);
		}
		public StructDeclarationContext structDeclaration() {
			return getRuleContext(StructDeclarationContext.class,0);
		}
		public ErrorDeclarationContext errorDeclaration() {
			return getRuleContext(ErrorDeclarationContext.class,0);
		}
		public EnumDeclarationContext enumDeclaration() {
			return getRuleContext(EnumDeclarationContext.class,0);
		}
		public EventDeclarationContext eventDeclaration() {
			return getRuleContext(EventDeclarationContext.class,0);
		}
		public ConstructorDeclarationContext constructorDeclaration() {
			return getRuleContext(ConstructorDeclarationContext.class,0);
		}
		public FunctionDeclarationContext functionDeclaration() {
			return getRuleContext(FunctionDeclarationContext.class,0);
		}
		public ContractPartContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_contractPart; }
	}

	public final ContractPartContext contractPart() throws RecognitionException {
		ContractPartContext _localctx = new ContractPartContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_contractPart);
		try {
			setState(194);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,12,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(187);
				variableDeclaration();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(188);
				structDeclaration();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(189);
				errorDeclaration();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(190);
				enumDeclaration();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(191);
				eventDeclaration();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(192);
				constructorDeclaration();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(193);
				functionDeclaration();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VariableDeclarationContext extends ParserRuleContext {
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode IDENTIFIER() { return getToken(LazoParser.IDENTIFIER, 0); }
		public TerminalNode NLS() { return getToken(LazoParser.NLS, 0); }
		public AssignmentContext assignment() {
			return getRuleContext(AssignmentContext.class,0);
		}
		public VariableDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variableDeclaration; }
	}

	public final VariableDeclarationContext variableDeclaration() throws RecognitionException {
		VariableDeclarationContext _localctx = new VariableDeclarationContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_variableDeclaration);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(197);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==READONLY) {
				{
				setState(196);
				match(READONLY);
				}
			}

			setState(199);
			type();
			setState(200);
			match(IDENTIFIER);
			setState(202);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__12) {
				{
				setState(201);
				assignment();
				}
			}

			setState(204);
			match(NLS);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StructDeclarationContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(LazoParser.IDENTIFIER, 0); }
		public List<TerminalNode> NLS() { return getTokens(LazoParser.NLS); }
		public TerminalNode NLS(int i) {
			return getToken(LazoParser.NLS, i);
		}
		public List<StructFieldContext> structField() {
			return getRuleContexts(StructFieldContext.class);
		}
		public StructFieldContext structField(int i) {
			return getRuleContext(StructFieldContext.class,i);
		}
		public StructDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_structDeclaration; }
	}

	public final StructDeclarationContext structDeclaration() throws RecognitionException {
		StructDeclarationContext _localctx = new StructDeclarationContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_structDeclaration);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(206);
			match(STRUCT);
			setState(207);
			match(IDENTIFIER);
			setState(208);
			match(LBRACE);
			setState(212);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==NLS) {
				{
				{
				setState(209);
				match(NLS);
				}
				}
				setState(214);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(218);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==MAP || _la==IDENTIFIER) {
				{
				{
				setState(215);
				structField();
				}
				}
				setState(220);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(221);
			match(RBRACE);
			setState(222);
			match(NLS);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ErrorDeclarationContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(LazoParser.IDENTIFIER, 0); }
		public List<TerminalNode> NLS() { return getTokens(LazoParser.NLS); }
		public TerminalNode NLS(int i) {
			return getToken(LazoParser.NLS, i);
		}
		public List<StructFieldContext> structField() {
			return getRuleContexts(StructFieldContext.class);
		}
		public StructFieldContext structField(int i) {
			return getRuleContext(StructFieldContext.class,i);
		}
		public ErrorDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_errorDeclaration; }
	}

	public final ErrorDeclarationContext errorDeclaration() throws RecognitionException {
		ErrorDeclarationContext _localctx = new ErrorDeclarationContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_errorDeclaration);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(224);
			match(T__0);
			setState(225);
			match(IDENTIFIER);
			setState(226);
			match(LBRACE);
			setState(230);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==NLS) {
				{
				{
				setState(227);
				match(NLS);
				}
				}
				setState(232);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(236);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==MAP || _la==IDENTIFIER) {
				{
				{
				setState(233);
				structField();
				}
				}
				setState(238);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(239);
			match(RBRACE);
			setState(240);
			match(NLS);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
